Fix extra spacing in Firefox

--- a/assets/stylesheets/kitten/helpers/button/_base.scss
+++ b/assets/stylesheets/kitten/helpers/button/_base.scss
@@ -122,6 +122,12 @@
   cursor: pointer;
   outline: 0;
 
+  // Fix extra spacing in Firefox.
+  &::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+  }
+
   &:hover {
     @include k-buttonBorder($hover-border-color);
 
